--- a/contact.html
+++ b/contact.html
@@ -131,6 +131,30 @@
         padding: 3px 10px;
         font-size: 16px;
     }
+
+  @media screen and (min-width:320px) and (max-width:480px){
+    #contact{
+     width:auto;
+     height:auto;
+}
+   .contact-box{
+     max-width:100%;
+     grid-template-columns:1fr;
+}
+   .contact-box .left{
+     display:none;
+} 
+  .contact-box .right{
+    width:100%;
+    padding:25px 10px;
+}
+   .field{
+     width:100%;
+     padding:12px 0;
+     padding: 1.1rem;
+     margin-bottom:22px;
+}
+}
 </style>
 
 <body>
